--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,5 +1,18 @@
 .header-body{
     width: 100%;
-    height: 10%;
-    background-color: aqua;
+    height: 20%;
+    background-color: rgb(31, 0, 71);
+    display: flex;
+    border: 2px inset black;
+    position: absolute;
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+h1{
+    color: white;
+    line-height: 30%;
 }
