--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,7 +1,8 @@
 .header-body{
     width: 100%;
     height: 20%;
-    background-color: rgb(31, 0, 71);
+    background: rgb(21,0,47);
+    background: linear-gradient(90deg, rgba(21,0,47,1) 0%, rgba(45,0,125,1) 100%);
     display: flex;
     border: 2px inset black;
     position: absolute;
