--- a/src/components/TriedCocktailItem.css
+++ b/src/components/TriedCocktailItem.css
@@ -2,14 +2,22 @@
     width: 100%;
     height: 10%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     background: rgb(154,154,154);
     background: linear-gradient(135deg, rgba(154,154,154,1) 0%, rgba(255,255,255,1) 100%);
     border: inset 1px grey;
 }
 
+.cocktail-name{
+    width: 30%;
+}
+
 #cocktail-image{
     height: 90%;
     aspect-ratio: 1;
+}
+
+.delete-button{
+    border: none;
 }
