--- a/src/pages/CocktailInfo.css
+++ b/src/pages/CocktailInfo.css
@@ -3,3 +3,18 @@
     position: absolute;
     bottom: 0;
 }
+@media (min-width: 600px) {
+    .cocktail-info{
+        width: 50%;
+    }
+}
+
+@media (max-width: 600px) {
+    .cocktail-info{
+        width: 100%;
+    }
+}
+
+#cocktail-info-image{
+    width: 100%;
+}
