--- a/src/pages/CocktailInfo.css
+++ b/src/pages/CocktailInfo.css
@@ -1,7 +1,9 @@
 .cocktail-info{
-    height: 80%;
     position: absolute;
-    bottom: 0;
+    top: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 @media (min-width: 600px) {
     .cocktail-info{
@@ -16,5 +18,15 @@
 }
 
 #cocktail-info-image{
-    width: 100%;
+    width: 80%;
+}
+
+.cocktail-grade{
+    width: 80%;
+}
+
+.cocktail-description{
+    width: 80%;
+    font-size: larger;
+    margin-bottom: 20px;
 }
