--- a/src/pages/CreateCocktail.css
+++ b/src/pages/CreateCocktail.css
@@ -1,11 +1,22 @@
 .create-cocktail{
     height: 80%;
-    width: 50%;
     position: absolute;
     bottom: 0;
     display: flex;
     align-items: center;
     flex-direction: column;
+}
+
+@media (min-width: 600px) {
+    .create-cocktail{
+        width: 50%;
+    }
+}
+
+@media (max-width: 600px) {
+    .create-cocktail{
+        width: 100%;
+    }
 }
 
 .cocktail-form{
