--- a/src/components/UntriedCocktailItem.css
+++ b/src/components/UntriedCocktailItem.css
@@ -9,12 +9,29 @@
     border: 1px inset grey;
 }
 
+.name-notes-and-ingredients{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
 .untried-cocktail-item-buttons{
     width: 20%;
     display: flex;
     justify-content: space-around;
 }
 
-.tried-button{
+.update-button{
     border: none;
+}
+
+.cocktail-untried-name{
+    width: 100%;
+    margin: 0;
+}
+
+.cocktail-paragraph-info{
+    margin: 0;
+    color: grey;
 }
