--- a/src/components/TriedCocktailItem.css
+++ b/src/components/TriedCocktailItem.css
@@ -6,7 +6,8 @@
     align-items: center;
     background: rgb(154,154,154);
     background: linear-gradient(135deg, rgba(154,154,154,1) 0%, rgba(255,255,255,1) 100%);
-    border: inset 1px grey;
+    border-top: 1px solid grey;
+    border-bottom: 1px solid grey;
 }
 
 .cocktail-name{
