--- a/src/components/UntriedCocktailItem.css
+++ b/src/components/UntriedCocktailItem.css
@@ -2,11 +2,18 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px;
     width: 100%;
-    height: 10%;
+    height: 15%;
     background-color: rgb(253, 228, 233);
-    border: 1px inset grey;
+    border-top: 1px inset grey;
+    border-bottom: 1px solid grey;
+}
+
+.border-left{
+    height: 100%;
+    width: 10px;
+    margin-right: 10px;
+    background-color: blueviolet;
 }
 
 .name-notes-and-ingredients{
@@ -33,5 +40,6 @@
 
 .cocktail-paragraph-info{
     margin: 0;
+    font-size: small;
     color: grey;
 }
