--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,19 +1,13 @@
 .header-body{
-    width: 99%;
+    width: 100%;
     height: 20%;
     background: rgb(21,0,47);
     background: linear-gradient(90deg, rgba(21,0,47,1) 0%, rgba(45,0,125,1) 100%);
     display: flex;
-    border: 2px inset black;
     position: absolute;
     z-index: 100;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     flex-direction: column;
-}
-
-.header-title{
-    color: white;
-    line-height: 30%;
 }
