--- a/src/components/TitleSearchAddBar.css
+++ b/src/components/TitleSearchAddBar.css
@@ -26,18 +26,20 @@
     display: flex;
     align-items: center;
     width: 70%;
+    height: 40%;
     justify-content: right;
 
 }
 
 .search-bar{
     width: 80%;
-    height: 35px;
+    height: 100%;
     display: flex;
 }
 
 .search-icon-box{
     width: 10%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -50,8 +52,12 @@
     background-color: rgb(51, 51, 51);
 }
 
+input{box-sizing:border-box} 
+
 .search-bar-input{
     border: none;
     border-radius: 0 5px 5px 0;
-    width: 90%;
+    width: 100%;
+    height: 100%;
+    padding-left: 5px;
 }
