--- a/src/components/TitleSearchAddBar.css
+++ b/src/components/TitleSearchAddBar.css
@@ -4,18 +4,22 @@
     align-items: center;
     color: white;
     justify-content: space-between;
+    position: relative;
 }
 
 .image-container{
+    position: relative;
     height: 100%;
     width: 30%;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: center;
+    z-index: 0;
 }
 
 .image-container img {
     height: 80%;
+    z-index: 0;
 }
 
 @media (min-width: 600px) {
