--- a/src/components/UntriedCocktailItem.css
+++ b/src/components/UntriedCocktailItem.css
@@ -4,7 +4,8 @@
     justify-content: space-between;
     width: 100%;
     height: 15%;
-    background-color: rgb(253, 228, 233);
+    background: rgb(199,199,199);
+    background: linear-gradient(90deg, rgba(199,199,199,1) 0%, rgba(255,255,255,1) 100%);
     border-top: 1px inset grey;
     border-bottom: 1px solid grey;
 }
@@ -13,7 +14,7 @@
     height: 100%;
     width: 10px;
     margin-right: 10px;
-    background-color: blueviolet;
+    background-color: rgb(248, 128, 148);
 }
 
 .name-notes-and-ingredients{
@@ -31,6 +32,7 @@
 
 .update-button{
     border: none;
+    background: none;
 }
 
 .cocktail-untried-name{
