--- a/src/components/UntriedCocktailItem.css
+++ b/src/components/UntriedCocktailItem.css
@@ -1,7 +1,6 @@
 .untried-cocktail-item-body{
     display: flex;
     align-items: center;
-    justify-content: space-between;
     width: 100%;
     height: 15%;
     background: rgb(199,199,199);
@@ -18,10 +17,11 @@
 }
 
 .name-notes-and-ingredients{
-    width: 80%;
+    width: 75%;
     display: flex;
     flex-direction: column;
     height: 100%;
+    margin-top: 10px;
 }
 
 .untried-cocktail-item-buttons{
@@ -44,4 +44,5 @@
     margin: 0;
     font-size: small;
     color: grey;
+    word-wrap: break-word;
 }
