--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,16 @@ body {
   margin: 0;
 }
 
+.app-body{
+  width: 100%;
+  height: 80%;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  bottom: 0;
+  z-index: 10;
+}
+
 .form-input-field-container{
   display: flex;
   flex-direction: column;
