--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,11 +1,11 @@
 .header-body{
     width: 100%;
-    height: 20%;
+    height: 20vh;
     background: rgb(21,0,47);
     background: linear-gradient(90deg, rgba(21,0,47,1) 0%, rgba(45,0,125,1) 100%);
     display: flex;
     position: absolute;
-    z-index: 100;
+    z-index: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
