--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,19 @@ body {
   z-index: 10;
 }
 
+@media (min-height: 550px) {
+  .app-body{
+      height: 80%;
+  }
+}
+
+@media (max-height: 550px) {
+  .app-body{
+      height: 60%;
+  }
+}
+
+
 .form-input-field-container{
   display: flex;
   flex-direction: column;
