--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,6 +1,5 @@
 .header-body{
     width: 100%;
-    height: 20vh;
     background: rgb(21,0,47);
     background: linear-gradient(90deg, rgba(21,0,47,1) 0%, rgba(45,0,125,1) 100%);
     display: flex;
@@ -10,4 +9,16 @@
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
+}
+
+@media (min-height: 550px) {
+    .header-body{
+        height: 20%;
+    }
+}
+
+@media (max-height: 550px) {
+    .header-body{
+        height: 40%;
+    }
 }
