--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,5 +1,6 @@
 .header-body{
     width: 100%;
+    height: 20%;
     background: rgb(21,0,47);
     background: linear-gradient(90deg, rgba(21,0,47,1) 0%, rgba(45,0,125,1) 100%);
     display: flex;
@@ -10,4 +11,5 @@
     align-items: center;
     flex-direction: column;
 }
+
 
