--- a/src/App.css
+++ b/src/App.css
@@ -13,14 +13,35 @@ body {
   margin: 0;
 }
 
+.app-header{
+  width: 100%;
+}
+
 .app-body{
   width: 100%;
-  height: 80%;
   display: flex;
   justify-content: center;
   position: absolute;
   bottom: 0;
   z-index: 10;
+}
+
+@media (min-height: 550px) {
+  .app-header{
+      height: 20%;
+  }
+  .app-body{
+    height: 80%;
+  }
+}
+
+@media (max-height: 550px) {
+  .app-header{
+      height: 30%;
+  }
+  .app-body{
+    height: 70%;
+  }
 }
 
 
