--- a/src/components/TriedCocktailItem.css
+++ b/src/components/TriedCocktailItem.css
@@ -1,6 +1,5 @@
 .tried-cocktail-item-body{
     width: 100%;
-    height: 20%;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -10,6 +9,18 @@
     border-bottom: 1px solid grey;
     position: relative;
     z-index: 10;
+}
+
+@media (min-height: 550px) {
+    .tried-cocktail-item-body{
+        height: 20%;
+    }
+}
+
+@media (max-height: 550px) {
+    .tried-cocktail-item-body{
+        height: 40%;
+    }
 }
 
 
