--- a/src/pages/CocktailInfo.css
+++ b/src/pages/CocktailInfo.css
@@ -7,6 +7,7 @@
     margin-top: 5%;
     padding-bottom: 20px;
 }
+
 @media (min-width: 600px) {
     .cocktail-info{
         width: 50%;
@@ -44,9 +45,13 @@
 }
 
 .cocktail-edit-button{
-    height: 30px;
+    height: 40px;
     width: 30%;
     border: none;
-    background-color: rgb(21,0,47);
+    background-color: rgb(45,0,125);
     color: white;
+}
+
+.cocktail-edit-button:hover{
+    background-color: rgb(74, 1, 201);
 }
