--- a/src/components/UploadForm.css
+++ b/src/components/UploadForm.css
@@ -3,11 +3,16 @@
     flex-direction: column;
 }
 
-.grade-selector{
-    height: 30px;
+.grades-container{
+    display: flex;
 }
 
-.notes-field{
-    resize: none;
-    font-size: large;
+.grade-container{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+}
+
+.grade-number-selector{
+    width: 30%;
 }
