--- a/src/components/UploadForm.css
+++ b/src/components/UploadForm.css
@@ -8,11 +8,12 @@
 }
 
 .grade-container{
-    width: 30%;
+    width: 40%;
     display: flex;
     flex-direction: column;
 }
 
 .grade-number-selector{
-    width: 30%;
+    width: 40%;
+    height: 40px;
 }
