--- a/src/App.css
+++ b/src/App.css
@@ -60,3 +60,12 @@ body {
   font-size: large;
   font-weight: bold;
 }
+
+.footer{
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  width: 100%;
+  z-index: 100;
+  height: 20%;
+}
