--- a/src/App.css
+++ b/src/App.css
@@ -63,9 +63,17 @@ body {
 
 .footer{
   position: fixed;
-  bottom: 0;
+  bottom: -13%;
   display: flex;
   width: 100%;
   z-index: 100;
-  height: 0%;
+  height: 15%;
 }
+
+/* .footer-showing{
+  height: 20%;
+}
+
+.footer-hiding{
+  height: 5%;
+} */
