--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,15 +1,55 @@
-.footer-body{
+.footer-container{
     width: 100%;
-    position: absolute;
-    bottom: 0;
-    background-color: purple;
-    transition: height ease-in-out 200ms;
+    height: 100%;
+    display: flex;
+    background: rgb(21,0,47);
+    background: linear-gradient(90deg, rgba(21,0,47,1) 0%, rgba(45,0,125,1) 100%);
+    position: relative;
+    transition: 200ms;
 }
 
-.footer-showing{
-    height: 100%;
+.footer-container-up{
+    bottom: 100px;
 }
-  
-.footer-hiding{
-    height: 20%;
+
+.footer-container-down{
+    bottom: 10px;
+}
+
+
+.footer-body{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    z-index: 1;
+}
+
+
+.footer-nav-bar{
+    width: 100%;
+    display: flex;
+    height: 30%;
+    position: relative;
+    bottom: 10px;
+    justify-content: center;
+}
+
+.footer-cocktail-image-container{
+    height: 100%;
+    display: flex;
+    justify-content: right;
+    position: relative;
+    bottom: 50%;
+}
+
+.footer-cocktail-image{
+    height: 100%;
+    width:auto;
+}
+
+.footer-sorter{
+    height: 100%;
+    border-radius: 5%;
 }
