--- a/src/components/UntriedCocktailItem.css
+++ b/src/components/UntriedCocktailItem.css
@@ -36,7 +36,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    margin-top: 10px;
+    padding: 10px;
 }
 
 .untried-cocktail-item-buttons{
