--- a/src/pages/CreateUpdate.css
+++ b/src/pages/CreateUpdate.css
@@ -43,11 +43,15 @@
     margin-bottom: 10px;
     display: flex;
     height: 30px;
+    justify-content: space-between;
 }
 
-#cocktail-ingredients{
-    width: 50%;
-    margin-right: 10px;
+.add-ingredients-input{
+    width: 40%;
+}
+
+.ingredients-measure-dropdown{
+    width: 20%;
 }
 
 .ingredients-list-item{
