--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -2,8 +2,8 @@
     width: 100%;
     height: 100%;
     display: flex;
-    background: rgb(21,0,47);
-    background: linear-gradient(90deg, rgba(21,0,47,1) 0%, rgba(45,0,125,1) 100%);
+    background: rgb(255,158,30);
+    background: linear-gradient(90deg, rgba(255,158,30,1) 0%, rgba(255,243,147,1) 40%, rgba(255,175,194,1) 90%);
     position: relative;
     transition: 200ms;
 }
@@ -41,6 +41,7 @@
     display: flex;
     justify-content: right;
     position: relative;
+    left: 20px;
     bottom: 50%;
 }
 
