--- a/src/components/TriedCocktailItem.css
+++ b/src/components/TriedCocktailItem.css
@@ -3,8 +3,9 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background: rgb(235,255,254);
-    background: linear-gradient(270deg, rgba(235,255,254,1) 0%, rgba(220,253,255,1) 100%);
+    /* background: rgb(235,255,254);
+    background: linear-gradient(270deg, rgba(235,255,254,1) 0%, rgba(220,253,255,1) 100%); */
+    background: rgb(255,233,120);
     border-top: 1px solid grey;
     border-bottom: 1px solid grey;
     position: relative;
