--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,8 +1,8 @@
 .header-body{
     width: 100%;
     height: 100%;
-    background: rgb(21,0,47);
-    background: linear-gradient(90deg, rgba(21,0,47,1) 0%, rgba(45,0,125,1) 100%);
+    background: rgb(255,158,30);
+    background: linear-gradient(90deg, rgba(255,158,30,1) 0%, rgba(255,243,147,1) 40%, rgba(255,175,194,1) 90%);
     display: flex;
     z-index: 0;
     display: flex;
