--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -28,6 +28,6 @@
 .nav-button{
     width:49.5%;
     height: 100%;
-    background-color: whitesmoke;
+    background-color: white;
     border: none;
 }
