--- a/src/components/TitleSearchAddBar.css
+++ b/src/components/TitleSearchAddBar.css
@@ -57,7 +57,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: black;
+    background-color: rgb(248, 128, 148);
     border-radius: 5px 0 0 5px;
     cursor: pointer;
 }
