--- a/src/components/TriedCocktailItem.css
+++ b/src/components/TriedCocktailItem.css
@@ -1,13 +1,13 @@
 .tried-cocktail-item-body{
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     /* background: rgb(235,255,254);
     background: linear-gradient(270deg, rgba(235,255,254,1) 0%, rgba(220,253,255,1) 100%); */
-    background: rgb(255,233,120);
-    border-top: 1px solid grey;
-    border-bottom: 1px solid grey;
+    background: "#FFD480";
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
     position: relative;
     z-index: 10;
 }
@@ -37,8 +37,16 @@
 .delete-button{
     border: none;
     background: none;
+    margin-right: 2%;
 }
 
 .tried-cocktail-item-grade{
     width: 12%;
+}
+
+.border-tried-left{
+    height: 100%;
+    width: 10px;
+    margin-right: 10px;
+    background-color: orange;
 }
