--- a/src/components/UntriedCocktailItem.css
+++ b/src/components/UntriedCocktailItem.css
@@ -3,9 +3,9 @@
     align-items: center;
     position: relative;
     width: 100%;
-   background-color: rgb(254, 236, 239);
-    border-top: 1px inset grey;
-    border-bottom: 1px solid grey;
+    background-color: rgb(254, 236, 239);
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
     z-index: 10;
     overflow-x: hidden;
     overflow-y: auto;
@@ -23,7 +23,7 @@
     }
 }
 
-.border-left{
+.border-untried-left{
     height: 100%;
     width: 10px;
     margin-right: 10px;
