--- a/src/pages/CocktailInfo.css
+++ b/src/pages/CocktailInfo.css
@@ -26,7 +26,7 @@
     margin-bottom: 10px;
 }
 
-.cocktail-grade{
+.cocktail-info-grades-container{
     width: 80%;
 }
 
@@ -49,7 +49,7 @@
     height: 40px;
     width: 30%;
     border: none;
-    background-color: rgb(45,0,125);
+    background-color: orange;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -57,5 +57,5 @@
 }
 
 .cocktail-edit-button:hover{
-    background-color: rgb(74, 1, 201);
+    background-color: pink;
 }
