--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -9,11 +9,11 @@
 }
 
 .footer-container-up{
-    bottom: 100px;
+    bottom: 80%;
 }
 
 .footer-container-down{
-    bottom: 10px;
+    bottom: 0px;
 }
 
 
