--- a/src/components/TitleSearchAddBar/TitleSearchAddBar.css
+++ b/src/components/TitleSearchAddBar/TitleSearchAddBar.css
@@ -49,6 +49,7 @@
     width: 80%;
     height: 100%;
     display: flex;
+    position: relative;
 }
 
 .search-icon-box{
@@ -71,7 +72,13 @@ input{box-sizing:border-box}
 .search-bar-input{
     border: none;
     border-radius: 0 5px 5px 0;
-    width: 100%;
+    width: 90%;
     height: 100%;
     padding-left: 5px;
+}
+
+.search-clear-icon{
+    width: 10%;
+    position: relative;
+    right: 10%;
 }
