--- a/src/pages/CocktailInfo/CocktailInfo.css
+++ b/src/pages/CocktailInfo/CocktailInfo.css
@@ -40,6 +40,13 @@
     width: 100%;
 }
 
+.cocktail-date-created-container{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
 .cocktail-buttons-container{
     width: 100%;
     height: 80px;
