Authorisation added! And other minor changes. Please dont break

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -23,16 +23,17 @@
     position: relative;
     display: flex;
     align-items: center;
+    justify-content: center;
     z-index: 1;
 }
 
 .footer-nav-bar{
-    width: 100%;
+    width: 60%;
     display: flex;
     height: 30%;
     position: relative;
     bottom: 10px;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 .footer-cocktail-image-container{
