--- a/src/components/LoadingSpinner/LoadingSpinner.css
+++ b/src/components/LoadingSpinner/LoadingSpinner.css
@@ -1,3 +1,11 @@
+.loading-spinner-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
 .loading-cocktail-image{
     height: 70px;
     animation: rotating 2s linear infinite;
