--- a/src/pages/CocktailInfo/CocktailInfo.css
+++ b/src/pages/CocktailInfo/CocktailInfo.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     margin-top: 5%;
-    padding-bottom: 20px;
+    padding: 0px 10px 20px 10px;
 }
 
 @media (min-width: 600px) {
@@ -16,7 +16,7 @@
 
 @media (max-width: 600px) {
     .cocktail-info{
-        width: 90%;
+        width: 100%;
     }
 }
 
