--- a/src/components/DeleteModal/DeleteModal.css
+++ b/src/components/DeleteModal/DeleteModal.css
@@ -1,19 +1,47 @@
 .delete-modal-container {
-    width: 30%;
     min-height: 120px;
     border: 1px solid red;
-    background-color: whitesmoke;
-    position: relative;
-    left: 35%;
-    bottom: 220px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width:100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.delete-modal-internal-container{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    padding: 5px;
+    justify-content: space-around;
+    border: 2px outset black;
+    background-color: rgb(255, 246, 228);
+    min-height: 200px;
+    padding: 15px;
+}
+
+
+@media (min-width: 600px) {
+    .delete-modal-internal-container{
+        width: 50%;
+        height: 30%;
+    }
+}
+
+@media (max-width: 600px) {
+    .delete-modal-internal-container{
+        width: 90%;
+        height: 25%;
+    }
 }
 
 .delete-modal-message{
+    font-size: 20px;
     color: red;
 }
 
@@ -27,7 +55,7 @@
     width: 40%;
     height: 40px;
     border: 1px solid red;
-    background-color: grey;
+    background-color: rgb(255, 114, 114);
     color: white;
     display: flex;
     justify-content: center;
