--- a/src/components/DeleteModal/DeleteModal.css
+++ b/src/components/DeleteModal/DeleteModal.css
@@ -18,10 +18,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    border: 2px outset black;
-    background-color: rgb(255, 246, 228);
+    border: 2px outset white;
+    background-color: rgb(255, 216, 222);
     min-height: 200px;
     padding: 15px;
+    box-shadow: 5px 5px 5px;
 }
 
 
@@ -40,8 +41,8 @@
 }
 
 .delete-modal-message{
-    font-size: 20px;
-    color: red;
+    font-size: 22px;
+    color: red
 }
 
 .delete-modal-buttons-container{
@@ -53,7 +54,7 @@
 .delete-modal-button {
     width: 40%;
     height: 40px;
-    border: 1px solid red;
+    border: 1px solid white;
     background-color: rgb(255, 114, 114);
     color: white;
     display: flex;
