--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ html,
   height: 100%;
   width: 100%;
   justify-content: center;
+  min-width: 300px;
 }
 
 body {
@@ -21,35 +22,19 @@ body {
 
 .app-header{
   width: 100%;
+  height: 20%;
+  min-height: 120px;
 }
 
 .app-body{
   width: 100%;
+  height: 80%;
   display: flex;
   justify-content: center;
   align-items: center;
   bottom: 0;
   z-index: 10;
 }
-
-@media (min-height: 550px) {
-  .app-header{
-      height: 20%;
-  }
-  .app-body{
-    height: 77%;
-  }
-}
-
-@media (max-height: 550px) {
-  .app-header{
-      height: 33%;
-  }
-  .app-body{
-    height: 67%;
-  }
-}
-
 
 .form-input-field-container{
   display: flex;
