--- a/src/components/TriedCocktailItem/TriedCocktailItem.css
+++ b/src/components/TriedCocktailItem/TriedCocktailItem.css
@@ -10,20 +10,9 @@
     border-bottom: 1px solid white;
     position: relative;
     z-index: 10;
+    height: 20%;
+    min-height: 100px;
 }
-
-@media (min-height: 550px) {
-    .tried-cocktail-item-body{
-        height: 21%;
-    }
-}
-
-@media (max-height: 550px) {
-    .tried-cocktail-item-body{
-        height: 40%;
-    }
-}
-
 
 .cocktail-name{
     width: 30%;
@@ -34,7 +23,6 @@
     margin-right: 2%;
     aspect-ratio: 1;
 }
-
 
 .tried-cocktail-item-grade{
     width: 12%;
