Small ui changes

--- a/src/components/TriedForm/TriedForm.css
+++ b/src/components/TriedForm/TriedForm.css
@@ -38,6 +38,11 @@
     background-color: pink;
 }
 
+.outerbar{
+    display: flex;
+    justify-content: left;
+}
+
 .innerbar{
     color: rgb(97, 0, 97);
     font-weight: bold;
