--- a/src/components/TitleSearchAddBar/TitleSearchAddBar.css
+++ b/src/components/TitleSearchAddBar/TitleSearchAddBar.css
@@ -53,7 +53,8 @@
 }
 
 .search-icon-box{
-    width: 10%;
+    width: 15%;
+    min-width: 20px;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -72,7 +73,7 @@ input{box-sizing:border-box}
 .search-bar-input{
     border: none;
     border-radius: 0 5px 5px 0;
-    width: 90%;
+    width: 85%;
     height: 100%;
     padding-left: 5px;
 }
