--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@ html{
 
 html, body, #root, .App{
   height: 100%;
+  min-height: 600px;
+  overflow: auto;
 }
 
 .app-header-and-body{
@@ -48,9 +50,9 @@ html, body, #root, .App{
 
 .footer{
   position: fixed;
-  bottom: -12%;
   display: flex;
   width: 100%;
   z-index: 100;
-  height: 15%;
+  height: 100px;
+  min-height: 100px;
 }
