--- a/src/components/PaginationBar/PaginationBar.css
+++ b/src/components/PaginationBar/PaginationBar.css
@@ -10,26 +10,26 @@
     z-index: 11;
 }
 .pagination-page-label{
-    width: 10%;
+    width: 20%;
     height: 100%;
     color: white;
     font-size: small;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(255, 193, 78);
+    background-color: orange;
 }
 
 .pagination-buttons{
-    width: 40%;
+    width: 60%;
     display: flex;
-    justify-content: right;
+    justify-content: center;
     gap: 2px;
 }
 .pagination-button{
     height: 100%;
     float: right;
-    width: 20%;
+    width: 15%;
     border: none;
     border-radius: 0 0 10% 10%;
     background-color: orange;
