--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -23,17 +23,19 @@
     position: relative;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: right;
     z-index: 1;
 }
 
 .footer-nav-bar{
-    width: 60%;
+    width: 100%;
     display: flex;
-    height: 40%;
+    height: 80%;
     position: relative;
     bottom: 10px;
-    justify-content: space-around;
+    align-items: center;
+    justify-content: center;
+    gap: 10px
 }
 
 .footer-cocktail-image-container{
@@ -52,10 +54,28 @@
 }
 
 .footer-sorter{
-    height: 100%;
+    height: 50%;
+    width: 30%;
     background-color: orange;
     color: white;
     border-radius: 5%;
     outline: none;
     border: none;
+    max-width: 150px;
+}
+
+.filter-button-container{
+    height: 100%;
+    width: 15%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.filter-button {
+    height: 50%;
+    width: 100%;
+    border: none;
+    background: none;
 }
