--- a/src/pages/FilterList/FilterList.css
+++ b/src/pages/FilterList/FilterList.css
@@ -22,8 +22,26 @@
 .unowned-ingredients-list-container{
     width: 100%;
     height: 50%;
-    overflow: hidden;
+    overflow: auto;
     border: 1px outset orange;
+}
+
+.unowned-ingredients-bar-row{
+    width: 100%;
+    height: 100px;
+    border: 5px inset rgb(110, 29, 29);
+    background-color: brown;
+    display: flex;
+    justify-content: space-around;
+}
+
+.unowned-ingredient-container{
+    width: 25%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
 }
 
 .add-unowned-ingredient-container{
