--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,21 @@
-
-html{
+/* html{
   overflow: auto;
-}
+} */
 
-html, body, #root, .App{
+html,
+body,
+#root,
+.App {
   height: 100%;
+  width: 100%;
   min-height: 600px;
   min-width: 400px;
+  position: absolute;
+  top: 0;
   overflow: hidden;
 }
 
-.app-header-and-body{
+.app-header-and-body {
   height: 97%;
   width: 100%;
   margin: 0;
@@ -18,13 +23,13 @@ html, body, #root, .App{
   scroll-behavior: smooth;
 }
 
-.app-header{
+.app-header {
   width: 100%;
   height: 20%;
   min-height: 120px;
 }
 
-.app-body{
+.app-body {
   width: 100%;
   height: 80%;
   display: flex;
@@ -34,22 +39,22 @@ html, body, #root, .App{
   z-index: 10;
 }
 
-.form-input-field-container{
+.form-input-field-container {
   display: flex;
   flex-direction: column;
   margin: 10px 0 10px 0;
 }
 
-.form-input-field{
+.form-input-field {
   height: 30px;
 }
 
-.form-label{
+.form-label {
   font-size: large;
   font-weight: bold;
 }
 
-.footer{
+.footer {
   position: absolute;
   top: 97%;
   display: flex;
