--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,23 +1,23 @@
-.footer-container{
+.footer-container {
     width: 100%;
     height: 100%;
     display: flex;
-    background: rgb(255,158,30);
-    background: linear-gradient(90deg, rgba(255,158,30,1) 0%, rgba(255,243,147,1) 40%, rgba(255,175,194,1) 90%);
+    background: rgb(255, 158, 30);
+    background: linear-gradient(90deg, rgba(255, 158, 30, 1) 0%, rgba(255, 243, 147, 1) 40%, rgba(255, 175, 194, 1) 90%);
     position: relative;
     transition: 200ms;
 }
 
-.footer-container-up{
+.footer-container-up {
     bottom: 70px;
 }
 
-.footer-container-down{
+.footer-container-down {
     bottom: 0px;
 }
 
 
-.footer-body{
+.footer-body {
     width: 100%;
     height: 100%;
     position: relative;
@@ -27,44 +27,45 @@
     z-index: 1;
 }
 
-.footer-nav-bar{
+.footer-nav-bar {
     width: 100%;
     display: flex;
     height: 80%;
     position: relative;
     bottom: 10px;
     align-items: center;
-    justify-content: center;
+    justify-content: right;
+    padding-right: 20px;
     gap: 10px
 }
 
-.footer-cocktail-image-container{
+.footer-cocktail-image-container {
     height: 100%;
     display: flex;
     width: 0%;
     justify-content: right;
     position: relative;
-    left: 25%;
+    left: 20%;
     bottom: 50%;
 }
 
-.footer-cocktail-image{
+.footer-cocktail-image {
     height: 100%;
-    width:auto;
+    width: auto;
 }
 
-.footer-sorter{
+.footer-sorter {
     height: 50%;
-    width: 30%;
+    width: 40%;
     background-color: orange;
     color: white;
     border-radius: 5%;
     outline: none;
     border: none;
-    max-width: 150px;
+    max-width: 165px;
 }
 
-.filter-button-container{
+.filter-button-container {
     height: 100%;
     width: 15%;
     display: flex;
