--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ body,
   width: 100%;
   margin: 0;
   overflow: auto;
-  scroll-behavior: smooth;
+ /* scroll-behavior: smooth; */
 }
 
 .app-header {
