Add tags. Updated UI for tags

--- a/src/components/TriedForm/TriedForm.css
+++ b/src/components/TriedForm/TriedForm.css
@@ -18,6 +18,11 @@
     height: 40px;
 }
 
+.form-tags-container{
+    display: flex;
+    width: 100%;
+}
+
 .custom-file-upload{
     margin-top: 5%;
     width: 50%;
