--- a/src/components/TriedCocktailItem/TriedCocktailItem.css
+++ b/src/components/TriedCocktailItem/TriedCocktailItem.css
@@ -11,10 +11,64 @@
     position: relative;
     z-index: 10;
     height: 20%;
+    overflow: auto !important;
+}
+
+.tried-cocktail-info-container{
+    flex: 1;
+    height: 90%;
+    justify-content: space-around;
+    padding: 0px 8px;
+    align-items: left;
+    display: flex;
+    flex-direction: column;
+    gap: 1px;
+}
+
+.tried-cocktail-name-grade{
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    width: 100%;
+    justify-content: "space-between";
 }
 
 .cocktail-name{
-    width: 30%;
+    height: 100%;
+    width: 85%;
+    font-weight: bolder;
+    font-size: 15px;
+}
+
+.tried-cocktail-item-grade{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    border: 1.5px solid;
+    background-color: rgb(255, 222, 227);
+    height: 20px;
+    width: 15%;
+    border-radius: 20px;
+    font-size: 11px;
+}
+
+.tried-cocktail-tags{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 50%;
+    gap: 1px;
+}
+
+.tried-cocktail-date-created{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    height: 10%;
+    font-size: small;
+    color: gray;
+    padding-bottom: 2px;
 }
 
 #cocktail-image{
@@ -23,13 +77,8 @@
     aspect-ratio: 1;
 }
 
-.tried-cocktail-item-grade{
-    width: 12%;
-}
-
 .border-tried-left{
     height: 100%;
     width: 10px;
-    margin-right: 10px;
     background-color: orange;
 }
