--- a/src/components/TriedCocktailItem/TriedCocktailItem.css
+++ b/src/components/TriedCocktailItem/TriedCocktailItem.css
@@ -34,10 +34,9 @@
 }
 
 .cocktail-name{
-    height: 100%;
     width: 85%;
     font-weight: bolder;
-    font-size: 15px;
+    font-size: 18px;
 }
 
 .tried-cocktail-item-grade{
@@ -50,7 +49,7 @@
     height: 20px;
     width: 15%;
     border-radius: 20px;
-    font-size: 11px;
+    font-size: 14px;
 }
 
 .tried-cocktail-tags{
@@ -59,6 +58,7 @@
     width: 100%;
     height: 50%;
     gap: 1px;
+    overflow: auto;
 }
 
 .tried-cocktail-date-created{
