--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -34,7 +34,7 @@
     position: relative;
     bottom: 10px;
     align-items: center;
-    justify-content: right;
+    justify-content: center;
     padding-right: 20px;
     gap: 10px
 }
@@ -56,7 +56,7 @@
 
 .footer-sorter {
     height: 50%;
-    width: 40%;
+    width: 30%;
     background-color: orange;
     color: white;
     border-radius: 5%;
