--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -34,7 +34,7 @@
     position: relative;
     bottom: 10px;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     padding-right: 20px;
     gap: 10px
 }
@@ -59,10 +59,11 @@
     width: 30%;
     background-color: orange;
     color: white;
-    border-radius: 5%;
+    border-radius: 10px;
     outline: none;
     border: none;
     max-width: 165px;
+    text-align: center;
 }
 
 .filter-button-container {
@@ -79,4 +80,13 @@
     width: 100%;
     border: none;
     background: none;
+}
+
+.footer-options-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    height: 100%;
+    gap: 20px;
 }
