--- a/src/pages/FilterList/FilterList.css
+++ b/src/pages/FilterList/FilterList.css
@@ -23,7 +23,6 @@
     width: 100%;
     height: 50%;
     overflow: auto;
-    border: 1px outset orange;
 }
 
 .unowned-ingredients-bar-row{
@@ -36,12 +35,13 @@
 }
 
 .unowned-ingredient-container{
-    width: 25%;
-    height: 100%;
+    width: 100%;
     display: flex;
-    justify-content: center;
+    padding: 5px 20px 5px 20px;
+    justify-content: space-between;
     align-items: center;
-    color: white;
+    background-color: rgb(253, 234, 255);
+    border: 1px solid rgb(253, 128, 255);
 }
 
 .add-unowned-ingredient-container{
@@ -52,15 +52,19 @@
 }
 
 #filter-list-ingredient-input{
-    width: 50%;
+    width: 80%;
     height: 100%;
     border: 1px solid orange;
+    border-radius: 5px 0 0 5px;
+    outline: none;
+    
 }
 
 .filter-list-add-ingredient-button{
     height: 100%;
-    width: 10%;
+    width: 20%;
     border: none;
     cursor: pointer;
     background-color: orange;
+    border-radius: 0 5px 5px 0;
 }
