--- a/src/components/DeleteModal/DeleteModal.css
+++ b/src/components/DeleteModal/DeleteModal.css
@@ -19,6 +19,7 @@
     align-items: center;
     justify-content: space-around;
     border: 2px outset white;
+    border-radius: 10px;
     background-color: rgb(255, 216, 222);
     min-height: 200px;
     padding: 15px;
@@ -55,6 +56,7 @@
     width: 40%;
     height: 40px;
     border: 1px solid white;
+    border-radius: 5px;
     background-color: rgb(255, 114, 114);
     color: white;
     display: flex;
