--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,8 @@ html,
 body,
 #root,
 .App {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   min-height: 600px;
   min-width: 400px;
   position: absolute;
@@ -16,22 +16,22 @@ body,
 }
 
 .app-header-and-body {
-  height: 97%;
-  width: 100%;
+  height: 97vh;
+  width: 100vw;
   margin: 0;
   overflow: auto;
  /* scroll-behavior: smooth; */
 }
 
 .app-header {
-  width: 100%;
-  height: 20%;
+  width: 100vw;
+  height: 20vh;
   min-height: 120px;
 }
 
 .app-body {
-  width: 100%;
-  height: 80%;
+  width: 100vw;
+  height: 80vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -58,7 +58,7 @@ body,
   position: absolute;
   top: 97%;
   display: flex;
-  width: 100%;
+  width: 100vw;
   z-index: 100;
   height: 100px;
   min-height: 100px;
