--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,6 @@ body,
   display: flex;
   width: 100vw;
   z-index: 100;
-  height: 100px;
-  min-height: 100px;
+  height: 3%;
   min-width: 400px
 }
