--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,19 +1,20 @@
 .footer-container {
     width: 100%;
-    height: 100%;
     display: flex;
     background: rgb(255, 158, 30);
     background: linear-gradient(90deg, rgba(255, 158, 30, 1) 0%, rgba(255, 243, 147, 1) 40%, rgba(255, 175, 194, 1) 90%);
-    position: relative;
+    position: absolute;
+    z-index: 1;
     transition: 200ms;
+    bottom: 0px;
 }
 
 .footer-container-up {
-    bottom: 70px;
+    height: 400%;
 }
 
 .footer-container-down {
-    bottom: 0px;
+    height: 100%;
 }
 
 
@@ -40,13 +41,14 @@
 }
 
 .footer-cocktail-image-container {
-    height: 100%;
+    height: 450%;
     display: flex;
     width: 0%;
     justify-content: right;
     position: relative;
     left: 20%;
-    bottom: 50%;
+    bottom: 50px;
+    z-index: 2;
 }
 
 .footer-cocktail-image {
