--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,18 +5,17 @@
     background: linear-gradient(90deg, rgba(255, 158, 30, 1) 0%, rgba(255, 243, 147, 1) 40%, rgba(255, 175, 194, 1) 90%);
     position: absolute;
     z-index: 1;
-    transition: 200ms;
+    transition: height 200ms;
     bottom: 0px;
-}
-
-.footer-container-up {
-    height: 400%;
 }
 
 .footer-container-down {
     height: 100%;
 }
 
+.footer-container-up {
+    height: 400%;
+}
 
 .footer-body {
     width: 100%;
