--- a/src/pages/CocktailInfo/CocktailInfo.css
+++ b/src/pages/CocktailInfo/CocktailInfo.css
@@ -19,10 +19,15 @@
     }
 }
 
-#cocktail-info-image{
+.image-slider-container {
     width: 100%;
-    height: auto;
-    margin-bottom: 10px;
+    margin: 10px 0
+}
+
+.cocktail-info-image {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
 .cocktail-info-grades-container{
@@ -33,10 +38,6 @@
     width: 100%;
     align-items: center;
 
-}
-
-.cocktail-ingredients{
-    width: 100%;
 }
 
 .cocktail-info-tags-container{
