--- a/src/components/TriedCocktailItem/TriedCocktailItem.css
+++ b/src/components/TriedCocktailItem/TriedCocktailItem.css
@@ -58,7 +58,7 @@
     width: 100%;
     height: 50%;
     gap: 1px;
-    overflow: auto;
+    overflow: visible;
 }
 
 .tried-cocktail-date-created{
